k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "jenkins"
  namespace: "jenkins"
  labels:
    chart: 'jenkins'
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: "jenkins"
    spec:
      containers:
      - name: "jenkins"
        image: "jenkinsci/blueocean:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "200m"
            memory: "300Mi"
        volumeMounts:
        - name: docker-socket
          mountPath: /var/run/docker.sock
      volumes:
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
