k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  name: "jenkins"
  namespace: "jenkins"
  labels:
    chart: 'jenkins'
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
  selector:
    app: "jenkins-selector"
