k8s/ingres.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "jenkins"
  namespace: "jenkins"
  labels:
    chart: 'jenkins'
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    
spec:
  rules:
    - host: 'jenkins'
      http:
        paths:
          - path: '/'
            backend:
              serviceName: jenkins
              servicePort: http
